fixed border alignment: fixed errors

--- a/src/css/components/_library-results.scss
+++ b/src/css/components/_library-results.scss
@@ -22,7 +22,7 @@
   border-top: 2px solid white;
   grid-column: 1 / span 12;
   grid-row: 2 / span 1;
-  height: 6vh;
+  height: 60vh;
   overflow-x: scroll;
   scrollbar-width: none;  
 }
