--- a/src/css/components/_library.scss
+++ b/src/css/components/_library.scss
@@ -12,7 +12,7 @@
 
 .library__library-card {
   @include library-results.library-results__library-card--libraries-list-item;
-  border-top: 2px solid white;
+  border: 2px solid white 0 0 0;
   grid-column: 1 / span 1;
   grid-row: 2 / span 1;
   overflow-y: scroll;
